# RuggedTurtle

./: .gitignore  Cargo.toml  README.md  Test cases  build-wasm.sh  build.rs  index.html
.cargo/: config.toml
dependencies/egui_dialogs/: Cargo.toml
dependencies/egui_dialogs/.cargo/: config.toml  rust-toolchain.toml
dependencies/egui_dialogs/src/: standard_dialog.rs
src/: app.rs  arithmetic.rs  boolean.rs  commands.rs  documentation.rs  execution.rs  included_files.rs  lib.rs  locale.rs  main.rs  parsing.rs  turtle.rs
src/locale/: default_locale.json  default_locale.yml  locale_en.yml  locale_hu.yml
