[package]
name = "rugged_turtle"
version = "1.0.0"
authors = ["Juraj Lukovics"]
edition = "2021"
build = "build.rs"

[build-dependencies]
winres = "0.1.12"

[dependencies]
egui = "0.31.1"
eframe = { version = "0.31.0", default-features = false, features = ["accesskit", "android-native-activity", "default_fonts", "glow", "persistence", "wayland"] }
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
egui_plot = "0.32.1"
rand = "0.9.1"
getrandom = { version = "0.3.2", features = ["wasm_js"] }
egui_extras = { version = "0.31.1", features = ["all_loaders", "file", "http", "image"] }
image = "0.25.6"
winit = { version = "0.30.9", features = ["android-native-activity", "x11"] }
egui_dialogs = "0.3.7"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"           # to access the DOM (to hide the loading text)

[profile.release]
# opt-level = 2 # fast and small wasm
opt-level = 's' # optimize for speed, wasm can be larger
# opt-level = 'z' # optimize for size, at the cost of speed
lto = true

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
