[package]
name = "rugged_turtle"
version = "1.0.0"
authors = ["Juraj Lukovics"]
edition = "2021"
build = "build.rs"

[workspace]
resolver = "3"
members = ["dependencies/egui_dialogs"]

[build-dependencies]
winres = "0.1.12"

[workspace.dependencies]
eframe = { version = "0.34.3", default-features = false, features = ["android-native-activity", "glow", "persistence", "wayland"] }
egui = { version = "0.34.3", features = ["serde"] }
egui_extras = { version = "0.34.3", features = ["all_loaders", "svg"] }

[dependencies]
egui = "0.34.3"
eframe = { version = "0.34.3", default-features = false, features = ["accesskit", "android-native-activity", "default_fonts", "glow", "persistence", "wayland"] }
log = "0.4"
egui_dialogs = { version = "0.3.7", path = "dependencies/egui_dialogs" }
# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
rand = "0.10.1"
getrandom = { version = "0.4.2", features = ["wasm_js"] }
egui_extras = { version = "0.34.3", features = ["all_loaders", "file", "http", "image"] }
image = "0.25.10"
winit = { version = "0.30.9", features = ["android-native-activity", "x11"] }
android_logger = "0.15.0"
serde_json = { version = "1.0.150", features = ["preserve_order"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"           # to access the DOM (to hide the loading text)

[profile.release]
# opt-level = 2 # fast and small wasm
opt-level = 's' # optimize for speed, wasm can be larger
# opt-level = 'z' # optimize for size, at the cost of speed
#lto = true

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[package.metadata.android]
build_targets = ["armv7-linux-androideabi", "aarch64-linux-android"]

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 35
