cargo-features = ["edition2024"]
[package]
name = "egui_dialogs"
version = "0.3.7"
rust-version = "1.85"
edition = "2024"
description = "Platform-agnostic, customizable dialogs for egui library."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/a-littlebit/egui_dialogs"
repository = "https://github.com/a-littlebit/egui_dialogs"
readme = "README.md"

[dependencies]
egui = {workspace = true}
sys-locale = "0.3.2"
egui_extras = { workspace = true, features = ["all_loaders"] }
eframe = {workspace = true}
